sap/5.0/modules/ROOT/pages/index.adoc
= SAP Connector - Mule 4

Support Category: Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Premium]

SAP Connector v5.0

Anypoint Connector for SAP (SAP Connector) enables the integration of data to and from external systems based on SAP NetWeaver.

SAP Connector is not available in the Design Center feature of Anypoint Platform.

This connector requires a separate license. Contact MuleSoft to evaluate or use this connector in production.

Mule runtime engine (Mule) supports SAP integration through Anypoint Connector for SAP, an SAP-certified Java connector that leverages the SAP Java Connector (JCo) libraries. SAP JCo facilitates communication between an SAP backend system and a Java application. It allows Java programs to connect to SAP systems and invoke Remote Function Modules. It also allows parsing of IDocs (SAP Intermediate Documents), among other object types. The SAP configuration supports both inbound and outbound communications.

The SAP JCo libraries enable Mule apps to:

* Execute BAPI functions over the following types of RFC protocols:
** Synchronous Remote Function Call RFC (sRFC)
** Asynchronous Remote Function Call RFC (aRFC)
* Act as a JCo server to be called as a BAPI over sRFC and aRFC
* Send IDocs over tRFC and qRFC
* Receive IDocs over tRFC and qRFC
* Transform SAP objects (JCo function for BAPI and IDocs) to and from XML

See <<SAP Terminology>> to understand SAP acronyms.


== About Connectors

Anypoint Connectors are Mule runtime engine extensions that enable you to connect to APIs
and resources on external systems, such as Salesforce, SAP, ServiceNow, and Twitter.

== Prerequisites

To use this information, you should have:

* A working knowledge of the SAP business context and, in particular, the SAP R/3 Business Suite
* A basic understanding of the SAP NetWeaver Platform from an administration point of view
* Knowledge of the ABAP language
* An SAP ID to download the required SAP libraries
* SAP login credentials to test your connection to your target resource
* Use of the RFC protocol to connect to NetWeaver Application Servers (NWAS) +
http://www.cipherbsc.com/solutions/sap-erp-central-component-erp-ecc/[ECC] and https://help.sap.com/viewer/p/SAP_CUSTOMER_RELATIONSHIP_MANAGEMENT[CRM] run on top of NWAS, as other SAP solutions do, so any customer using the connector can access those systems.
* Knowledge of how to create a Mule app using Anypoint Studio

Before creating an app:

. You must have access to the SAP target resource and Anypoint Platform.
. Browse to the SAP web site and download the version 3.0.18 libraries
for IDoc, JCO, and JCO Native to a folder on your computer. +
Studio 7 can use the library formats directly without conversion.

== Audience

* Starting user +
Configure your Mule app in
xref:sap-connector-studio.adoc[Anypoint Studio]. The xref:sap-connector-config-topics.adoc[Additional Configuration Information] topic helps you extend your understanding of the SAP Connector.
* Power user +
Read the xref:sap-connector-xml-maven.adoc[XML and Maven Support],
xref:sap-connector-config-topics.adoc[Additional Configuration Information],
and xref:sap-connector-examples.adoc[Examples] topics.

== Exchange Templates and Examples

https://www.mulesoft.com/exchange/[Anypoint Exchange] provides templates and examples
to simplify your use of the SAP connector. Templates provide a starting point
that enables you to add additional functionality. Examples provide a complete solution.

== SAP Exchange Examples and Templates

* *General:* https://www.mulesoft.com/exchange/org.mule.templates/template-apiled-system-account-sap/[Account System API - SAP Implementation Template],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc.wday.sap.db-account-broadcast/[Salesforce to Salesforce, Workday, SAP, and Database Account Broadcast]

* *Salesforce and SAP:* https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-account-aggregation/[Account Aggregation],
https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-customer-bidirectional-sync/[Account Customer Bidirectional Sync],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-opportunity-aggregation/[Opportunity Aggregation], https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-product-aggregation/[Product Aggregation], https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-product-bidirectional-sync/[Product Bidirectional Sync]

* *Salesforce to SAP:* https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-account-broadcast/[Account Broadcast], https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-account-migration/[Account Migration], https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-opportunity-broadcast/[Opportunity Broadcast], https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-opportunity-migration/[Opportunity Migration], https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-product-broadcast/[Product Broadcast]

* *SAP to Salesforce:* https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-contact-broadcast/[Contact Broadcast], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-contact-migration/[Contact Migration], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-customer-broadcast/[Customer Broadcast], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-customer-migration/[Customer Migration], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-product-broadcast/[Product Material Broadcast], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-material-migration/[Product Material Migration]

* *SAP to Workday:* https://www.mulesoft.com/exchange/org.mule.templates/template-sap2wday-employee-migration/[Employee Migration], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2wday-organization-broadcast/[Organization Broadcast], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2wday-organization-migration/[Organization Migration]

* *Workday and SAP:*
https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sap-organization-aggregation/[Organization Aggregation], https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sap-worker-aggregation/[Worker (Employee) Aggregation]

* *Workday to SAP:* https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sap-worker2employee-migration/[Worker (Employee) Migration], https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sap-worker-broadcast/[Worker Broadcast]

== Next

After you have met the prerequisites and experimented with templates and examples, you are ready to create an app with
xref:sap-connector-studio.adoc[Anypoint Studio].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:release-notes::connector/sap-connector-release-notes-mule-4.adoc[SAP Connector Release Notes]
* https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-sap-connector/[SAP Connector in Anypoint Exchange]
* https://help.mulesoft.com[MuleSoft Help Center]
