sap/5.6/modules/ROOT/pages/index.adoc
= SAP Connector 5.6 - Mule 4

Anypoint Connector for SAP (SAP Connector) enables the integration of data to and from external systems based on SAP NetWeaver.

SAP Connector is not available in the Design Center feature of Anypoint Platform.

This connector requires a separate license. Contact MuleSoft to evaluate or use this connector in production.

Mule runtime engine (Mule) supports SAP integration through Anypoint Connector for SAP, an SAP-certified Java connector that leverages the SAP Java Connector (JCo) libraries. SAP JCo facilitates communication between an SAP backend system and a Java application. It allows Java programs to connect to SAP systems and invoke Remote Function Modules. It also allows the parsing of IDocs (SAP Intermediate Documents), among other object types. The SAP configuration supports both inbound and outbound communications.

The SAP JCo libraries enable Mule apps to:

* Execute BAPI functions over the following types of RFC protocols:
** Synchronous Remote Function Call RFC (sRFC)
** Asynchronous Remote Function Call RFC (aRFC)
* Act as a JCo server to be called as a BAPI over sRFC and aRFC
* Send IDocs over tRFC and qRFC
* Receive IDocs over tRFC and qRFC
* Transform SAP objects (JCo function for BAPI and IDocs) to and from XML

See xref:sap-connector-terminology.adoc[SAP Terminology] to understand SAP acronyms.

== Before You Begin

To use this connector, you must be familiar with:

* SAP Connector's API
* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements and global elements in a Mule flow
* Creating a Mule app using Anypoint Studio (Studio)

Before creating an app, you must have:

* Credentials to access the SAP target resource
* A service user with the roles or profiles that allow you to use the required RFCs, BAPIs, and IDocs
* A working knowledge of the SAP business context and, in particular, the SAP R/3 Business Suite
* A basic understanding of the SAP NetWeaver Platform from an administration point of view
* Knowledge of the ABAP language
* An SAP ID to download the required SAP libraries
* Use of the RFC protocol to connect to NetWeaver Application Servers (NWAS) +
http://www.cipherbsc.com/solutions/sap-erp-central-component-erp-ecc/[ECC] and https://help.sap.com/viewer/p/SAP_CUSTOMER_RELATIONSHIP_MANAGEMENT[CRM] run on top of NWAS, as other SAP solutions do, so any customer using the connector can access those systems.
* Knowledge of how to create a Mule app using Anypoint Studio

Before creating an app, browse to the SAP web site and download the version 3.1.x libraries
for IDoc, JCO, and JCO Native to a folder on your computer.

Studio 7 can use the library formats directly without conversion.

== Common Use Cases for the Connector

Common use cases for SAP Connector include:

* *Unified View of Enterprise Resources*
+
Enable real-time integration of digital information across your business from financial accounting, materials management, sales and distribution, and customer service to make data-driven decisions that optimize core business processes.

* *Data Synchronization*
+
Sync SAP data with your business applications, such as Salesforce, Workday, and Marketo. For example, you can migrate a large set of accounts from SAP to Salesforce or broadcast changes in organizations from SAP to Workday in real-time.

* *Sales Order Automation*
+
Automate sales order processing between SAP ERP and a CRM, such as Salesforce.

* *BAPI Support*
+
Discover BAPIs, query BAPI/RFM enabled function modules, or execute BAPI functions.

* *IDoc Integration*
+
Send and receive IDocs from SAP, import IDocs, or transform SAP objects to and from XML.

For examples of these use cases, refer to xref:sap-connector-examples.adoc[SAP Connector Examples].

== Authentication Types

SAP Connector connections use the following authentication types:

* Certificate
+
Connection provider that relies on an X509 certificate to authenticate the user
+
* Simple Connection Provider
+
Connection provider that connects using a username and password

== Exchange Templates and Examples

https://www.mulesoft.com/exchange/[Anypoint Exchange] provides templates that you can use as starting points for your apps and examples that illustrate a complete solution:

* *General:* https://www.mulesoft.com/exchange/org.mule.templates/template-apiled-system-account-sap/[Account System API - SAP Implementation Template],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc.wday.sap.db-account-broadcast/[Salesforce to Salesforce, Workday, SAP, and Database Account Broadcast]

* *Salesforce and SAP:* https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-account-aggregation/[Account Aggregation],
https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-customer-bidirectional-sync/[Account Customer Bidirectional Sync],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-opportunity-aggregation/[Opportunity Aggregation], https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-product-aggregation/[Product Aggregation], https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-product-bidirectional-sync/[Product Bidirectional Sync]

* *Salesforce to SAP:* https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-account-broadcast/[Account Broadcast], https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-account-migration/[Account Migration], https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-opportunity-broadcast/[Opportunity Broadcast], https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-opportunity-migration/[Opportunity Migration], https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-product-broadcast/[Product Broadcast]

* *SAP to Salesforce:* https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-contact-broadcast/[Contact Broadcast], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-contact-migration/[Contact Migration], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-customer-broadcast/[Customer Broadcast], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-customer-migration/[Customer Migration], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-product-broadcast/[Product Material Broadcast], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-material-migration/[Product Material Migration]

* *SAP to Workday:* https://www.mulesoft.com/exchange/org.mule.templates/template-sap2wday-employee-migration/[Employee Migration], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2wday-organization-broadcast/[Organization Broadcast], https://www.mulesoft.com/exchange/org.mule.templates/template-sap2wday-organization-migration/[Organization Migration]

* *Workday and SAP:*
https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sap-organization-aggregation/[Organization Aggregation], https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sap-worker-aggregation/[Worker (Employee) Aggregation]

* *Workday to SAP:* https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sap-worker2employee-migration/[Worker (Employee) Migration], https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sap-worker-broadcast/[Worker Broadcast]

== Next

After you complete the prerequisites and experimented with templates and examples, you are ready to create an app with
xref:sap-connector-studio.adoc[Anypoint Studio].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-sap-connector/[SAP Connector in Anypoint Exchange]
* https://help.mulesoft.com[MuleSoft Help Center]
